--- a/jobclient/app/build.gradle
+++ b/jobclient/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:palette-v7:22.2.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.afollestad:material-dialogs:0.7.3.1'
+    compile files('libs/xUtils-2.6.14.jar')
     compile files('libs/jsoup-1.8.1.jar')
     compile files('libs/libs/pinyin4j-2.5.0.jar')
     compile 'de.hdodenhof:circleimageview:1.3.0'
